--- a/abj1.html
+++ b/abj1.html
@@ -118,10 +118,10 @@
     <div class="contenedor-col-curso">
         <div class="curso-nav">
             <a href="cursos.html">
-                <h4 class="curso-activo">juegos de culturas originarias</h4>
+                <h4>juegos de culturas originarias</h4>
             </a>
             <a href="abj1.html">
-                <h4>abj1</h4>
+                <h4 class="curso-activo">abj1</h4>
             </a>
             <a href="abj2.html">
                 <h4>abj2</h4>
@@ -131,7 +131,7 @@
             </a>
         </div>
         <div class="curso-central">
-            <img src="img/etnicos3.jpg" alt="">
+            <img src="img/abj1.jpg" alt="">
         </div>
         <div class="banda-central">
             <div class="banda-central-titulo">
@@ -161,37 +161,34 @@
                         <ul>
                             <li>
                                 <p>
-                                    JUEGOS Y CULTURAS ORIGINARIAS
+                                    El juego de mesa, historia y componentes
                                 </p>
                             </li>
                             <li>
                                 <p> 
-                                    EL YAGUARETÉ KORÁ
+                                    Que es ABJ
                                 </p>
                             </li>
                             <li>
                                 <p>
-                                    JUEGOS Y MÚSICA
+                                    Bases pedagógicas<br>
+                                    a-El educador/a y dinamizador del juego.<br>
+                                    b-El jugador/a.
                                 </p>
                             </li>
                             <li>
                                 <p>
-                                    PATOLLI, PULUC Y YOLÉ
+                                    Familia de los juegos de mesa
                                 </p>
                             </li>
                             <li>
                                 <p>
-                                    CHONETE Y CUCUNUBÁ
+                                    El juego en la educación formal y no formal
                                 </p>
                             </li>
                             <li>
                                 <p>
-                                    JUEGOS Y DEPORTE
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    JUEGOS Y MATEMÁTICAS
+                                    El juego en el aula, experiencias y aplicaciones
                                 </p>
                             </li>
                         </ul>
@@ -200,133 +197,133 @@
             </div>
         </div>
         <div class="btn-masthead btn-curso">
-            <a href="https://mpago.la/1dgCpT1" class="btn">empieza ya</a>
+            <a href="https://mpago.la/2ynGxsH" class="btn">empieza ya</a>
         </div>
     </div>
     <!-- PREGUNTAS FRECUENTES -->
-    <div class="curso-img-contenedor">
-        <h3>Curso completo de <strong>JUEGOS DE CULTURAS ORIGINARIAS</strong> con especialistas</h3>
-    </div>
-    <div class="preguntas-title">
-        <h3>Preguntas frecuentes</h3>
-    </div>
-    <div class="preguntas-frecuentes">
-        <div class="preguntas-item-contenido">
-            <p>¿A quién apunta el curso?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    El curso está dirigido a docentes, estudiantes, animadores, ludotecarios y
-                    toda persona que desee conocer y conectar con los juegos de culturas originarias y su gran sabiduría.                    .
-                </p>
+    <div class="abj-contendor">
+        <div class="preg-frecuentes-abj">
+            <div class="curso-img-contenedor">
+                <h3>Curso completo de <strong>ABJ1</strong> con especialistas</h3>
             </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p>¿Quienes son los docentes?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-               <p>
-                    Prof. Nancy Fernández Parra.<br>
-                    - Rectora de la tecnicatura en ludotecas con diseño de juegos y juguetes del Instituto Yuguets.<br>
-                    - Licenciada y Profesora de Artes combinadas (UBA).<br>
-                    - Estudio teatro con Agustín Alesso.<br>
-                    - Participó en diversos seminarios de teatro Antropológico de la Comuna Baires.<br>
-                    - Se especializó en teatro para niños, con el aporte de la compañia teatral CLUNY a partir de una beca en Quebec, Canada.<br>
-                    - Coordina el espacio teatral Parsifal, como un espacio de laboratorio y Happening teatral.<br><br>
-                    Prof. Alejandro Oliva<br>
-                    - Docente en la Tecnicatura en Ludotecas con diseño en juegos y juguetes del Instituto Superior Yuguets.<br>
-                    - Músico, compositor, director de teatro actor dramaturgo y profesor de ajedrez.<br>
-                    - Coordinador Pedagógico en el programa de ajedrez escolar.<br>
-                    - Docente de la diplomatura en aspectos socioculturales y educativos de ejedrez en UNSAM y UNTF.<br>
-                    - Fundador, compositor y integrante del grupo musical “Tocada Movida”<br>
-                    - Autor del libro “Tocada Movida, relatos de Música y Ajedrez”<br>
-                    - Disertante y docente de la fundación Kasparov para Iberoamérica.
-               </p>
+            <div class="preguntas-title">
+                <h3>Preguntas frecuentes</h3>
             </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p>¿Cómo es el proceso de inscripción?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    Para inscribirse al curso podes hacerlo directamente desde el botón comprar y
-                    seguir los pasos o bien contactarse con nosotros vía whatsapp o mail.
-                </p>
-            </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p>¿Cuando puedo empezar?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    Los cursos comienzan cada mes, consultar por fechas de inicio.
-                </p>
-            </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p>¿Cual es la duración del curso?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    El curso consta de 4 encuentros. Los días Miércoles de 19 a 20:30 hs..
-                </p>
-            </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p>¿Cómo es la dinámica del curso?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    El programa se ofrece a distancia mediante clases en vivo por zoom, entrega de material de lectura complementario y un grupo de WhatsApp para consultas y compartir experiencias.<br>
-                    Las clases en vivo quedarán grabadas en la plataforma de YUGUETS para quienes no hayan podido conectarse o deseen volver a verlas.<br>
-                    Para ser evaluado deberá presentar un trabajo práctico.<br>
-                    Al finalizarlo se otorgará el certificado correspondiente.
-                </p>
-            </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p>¿Puedo hacer varios cursos a la vez?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    Con ésta modalidad efectivamente es posible inscribirse en más de un curso simultáneamente.
-                </p>
-            </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p>¿Cual es el valor del curso?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    El curso tiene un costo de $8.000.- (pesos argentinos).
-                </p>
-            </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p> ¿Qué opciones de pago tengo?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    Transferencia Bancaria o MercadoPago.
-                </p>
+            <div class="preguntas-frecuentes">
+                <div class="preguntas-item-contenido">
+                    <p>¿A quién apunta el curso?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            El curso está dirigido a docentes, estudiantes, animadores, ludotecarios y
+                            toda persona que desee adquirir una cultura lúdica o potenciar su creatividad.
+                        </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p>¿Quienes son los docentes?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                       <p>
+                            Prof. Sandra Vissani<br>
+                            - Master en Gamificación y Narrativa Transmedia (IEBS, Barcelona, España)<br>
+                            - Diplomatura en creación de juegos de mesa (UTN, Buenos Aires, Argentina)<br>
+                            - Técnica nacional en recreación (Estudio Ines Moreno, Buenos Aires)<br>
+                            - Fundadora de Casa Homo Ludens (Bahía Blanca, Argentina)<br><br>
+                            Natalia Jiménez Morell<br>
+                            - Maestra de educación infantil (Universidad de Barcelona, España)<br>
+                            - Especialista en educación socio constructivista (Escuela de especialización Educativa Lima, Perú)<br>
+                            - Fundadora de Casa Homo Ludens (Bahía Blanca, Argentina)<br>
+                       </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p>¿Cómo es el proceso de inscripción?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            Para inscribirse al curso podes hacerlo directamente desde el botón Adquirir y
+                            seguir los pasos o bien contactarse con nosotros vía whatsapp o E-mail.
+                        </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p>¿Cuando puedo empezar?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            Fecha de inicio: 16 de febrero del 2022.
+                        </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p>¿Cual es la duración del curso?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            El curso consta de 4 encuentros.<br>
+                            16 y 23 de febrero; 2 y 9 de marzo.<br>
+                            <strong>Horario:</strong> 19 a 20:30 hs.
+                        </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p>¿Cómo es la dinámica del curso?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            El curso se ofrece a distancia mediante 4 clases anacrónicas con una duración de 1 hora cada una. Pudiendo así manejar tus días y horarios.<br>
+                            Cada clase incluye material complementario de lectura  y juegos para descargar, jugar y/o modificar de acuerdo al interés de aplicación de cada uno.<br>
+                            Foro para compartir experiencias. Un grupo de WhatsApp para abrir diálogo entre los que cursa y profesores.<br>
+                            Para la entrega del certificado deberá presentar un trabajo práctico al finalizar el curso.
+                        </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p>¿Puedo hacer varios cursos a la vez?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            Con ésta modalidad efectivamente es posible inscribirse en más de un curso simultáneamente.
+                        </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p>¿Cual es el valor del curso?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            El curso tiene un costo de $6.000 (pesos argentinos).
+                        </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p> ¿Qué opciones de pago tengo?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            Transferencia Bancaria o MercadoPago.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
