--- a/abj2.html
+++ b/abj2.html
@@ -102,12 +102,12 @@
     </a>
     <!-- MASTHEAD -->
     <div class="masthead">
-        <div class="col-1">
-            <p>JUEGOS CONSCIENTES</p>
+        <div class="col-1 cursos-color-text">
+            <p>Creamos cursos extraordinarios para personas extraordinarias.</p>
+            <p>Conectamos con el juego y la actitud lúdica para vivir con alegría y creatividad.</p>
         </div>
         <div class="col-2">
             <div class="text-masthead">
-                <h3>Ingreso Marzo 2022</h3>
             </div>
             <div class="btn-masthead">
                 <a href="inscripcion.html" class="btn">Inscripción</a>
@@ -118,32 +118,29 @@
     <div class="contenedor-col-curso">
         <div class="curso-nav">
             <a href="cursos.html">
-                <h4>juegos étnicos</h4>
+                <h4>juegos de culturas originarias</h4>
+            </a>
+            <a href="abj1.html">
+                <h4>abj1</h4>
+            </a>
+            <a href="abj2.html">
+                <h4 class="curso-activo">abj2</h4>
             </a>
             <a href="titeres.html">
-                <h4>títeres</h4>
-            </a>
-            <a href="ajedrez.html">
-                <h4>ajedrez y cultura</h4>
-            </a>
-            <a href="abj.html">
-                <h4 class="curso-activo">abj</h4>
+                <h4>titeres</h4>
             </a>
         </div>
         <div class="curso-central">
-            <img src="img/ABJ.jpg" alt="">
+            <img src="img/abj2.jpg" alt="">
         </div>
         <div class="banda-central">
-            <p>on line</p>
-        </div>
-        <div class="curso-col-text">
-            <h2>aprendizaje basado en juego</h2>
-        </div>
-        <div class="curso-programa">
-            <div class="curso-programa-boton">
-                <h4>ver programa >>></h4>
+            <div class="banda-central-titulo">
+                <p>Curso</p>
             </div>
-            <div class="curso-programa-datos">
+            <div class="banda-central-texto">
+                <p>on line</p>
+            </div>
+            <div class="banda-central-datos">
                 <p>
                     <i class="fas fa-map-marker-alt"></i>
                     sede plataforma online
@@ -154,83 +151,58 @@
                 </p>
             </div>
         </div>
-        <div class="curso-programa-drop">
-            <h2 class="prox-text">cuso de verano<br>
-                <p>Inicia el 16 de febrero</p>
-            </h2>
-            <div class="drop-contenido">
-                <div class="drop-item">
-                    <ul>
-                        <li>
-                            <p>
-                                El juego de mesa, historia y componentes
-                            </p>
-                        </li>
-                        <li>
-                            <p> 
-                                Que es ABJ
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                Bases pedagógicas<br>
-                                a-El educador/a y dinamizador del juego.<br>
-                                b-El jugador/a.
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                Familia de los juegos de mesa
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                El juego en la educación formal y no formal
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                El juego en el aula, experiencias y aplicaciones
-                            </p>
-                        </li>
-                    </ul>
-                    <p>
-                        a cargo de las profesionales<br>
-                        -Natalia Jiménez Morelli<br>
-                        -Sandra Vissani
-                    </p>
+        <div class="curso-programa">
+            <div class="curso-programa-boton">
+                <h4>ver programa >>></h4>
+            </div>
+            <div class="curso-programa-drop">
+                <div class="drop-contenido">
+                    <div class="drop-item">
+                        <ul>
+                            <li>
+                                <p>
+                                    JUGAR ES APRENDER
+                                </p>
+                            </li>
+                            <li>
+                                <p> 
+                                    EDUCAR JUGANDO
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    LA MOTIVACIÓN
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    CÓMO HACER UN PROYECTO LÚDICO
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    JUEGOS NO COMERCIALES
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    DISEÑO DE TUS PROPIOS SERIOUS GAME
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="btn-masthead btn-curso">
+            <a href="https://mpago.la/1UJDTrB" class="btn">empieza ya</a>
+        </div>
     </div>
     <!-- PREGUNTAS FRECUENTES -->
-    <div class="curso-abj">
-        <div class="abj-img">
-            <img src="img/cursoABJ.jpg" alt="">
-        </div>
-        <div class="abj-pago">
-            <h3>Curso completo de ABJ</h3>
-            <p>Valor del curso AR$6.000-</p>
-            <a href="https://forms.gle/UpE1ta2Bps1NXuiX6" class="abj-btn-primero">Inscripcion</a>
-            <a href="https://mpago.la/2ynGxsH" class="abj-btn-segundo">Adquirir CURSO</a>
-        </div>
-        <div class="abj-texto">
-            <p>
-                Además de las CURSOS, la Carrera Oficial y
-                talleres intensivos que facilitan una rápida
-                inserción laboral reciben comprobante de
-                formación profesional dados por el Centro
-                Yuguets Argentina (ONG).
-            </p>
-        </div>
-    </div>
     <div class="abj-contendor">
-        <div class="abj-img">
-            <img src="img/abj-min.jpg" alt="">
-        </div>
         <div class="preg-frecuentes-abj">
             <div class="curso-img-contenedor">
-                <h3>Curso completo de <strong>ABJ</strong> con especialistas</h3>
+                <h3>Curso completo de <strong>ABJ2</strong> con especialistas</h3>
             </div>
             <div class="preguntas-title">
                 <h3>Preguntas frecuentes</h3>
@@ -286,7 +258,7 @@
                 <div class="preguntas-texto">
                     <div class="preguntas-texto-contenido">
                         <p>
-                            Fecha de inicio: 16 de febrero del 2022.
+                            El curso de ABJ2 puede iniciarse en cualquier momento, recomendamos haber realizado el primer tramo de ABJ.
                         </p>
                     </div>
                 </div>
@@ -297,9 +269,7 @@
                 <div class="preguntas-texto">
                     <div class="preguntas-texto-contenido">
                         <p>
-                            El curso consta de 4 encuentros.<br>
-                            16 y 23 de febrero; 2 y 9 de marzo.<br>
-                            <strong>Horario:</strong> 19 a 20:30 hs.
+                            El curso contiene de  4 módulos, cada módulo consta de 2 videos, uno teórico y otro práctico con una duración de 40 minutos cada uno recomendamos hacer un módulo por semana para afianzar los conocimientos.
                         </p>
                     </div>
                 </div>
@@ -310,12 +280,9 @@
                 <div class="preguntas-texto">
                     <div class="preguntas-texto-contenido">
                         <p>
-                            TEMARIO - El programa se ofrece a distancia mediante clases en vivo por zoom,
-                            y un grupo de WhatsApp para consultas y compartir experiencias.<br>
-                            Las clases en vivo quedarán grabadas en la plataforma de YUGUETS para quienes
-                            no hayan podido conectarse o deseen volver a verlas.<br>
-                            Para ser evaluado deberá presentar un trabajo práctico.<br>
-                            Al finalizarlo se otorgará el DIPLOMA correspondiente.
+                            El programa se ofrece a distancia mediante clases en vivo por zoom, entrega de material de lectura complementarios, y un WhatsApp para consultas y compartir experiencias.<br>
+                            Las clases en vivo quedarán grabadas en la plataforma de YUGUETS para quienes no hayan podido conectarse o deseen volver a verlas.<br>
+                            Para ser evaluado deberá presentar un trabajo práctico.
                         </p>
                     </div>
                 </div>
@@ -337,7 +304,7 @@
                 <div class="preguntas-texto">
                     <div class="preguntas-texto-contenido">
                         <p>
-                            El curso tiene un costo de $6.000.- ó 2 cuotas de $3.500.- (pesos argentinos).
+                            El curso tiene un costo de $8.000 (pesos argentinos).
                         </p>
                     </div>
                 </div>
