--- a/inscripcion.html
+++ b/inscripcion.html
@@ -105,7 +105,7 @@
         </div>
         <div class="col-2">
             <div class="text-masthead">
-                <h3>Ingreso Marzo 2022</h3>
+                <h3>Ingreso Agosto 2022</h3>
             </div><br><br>
             <div class="btn-masthead">
                 <a href="https://forms.gle/u5VTHzuJ4dt1HH9E8" class="btn">Formulario</a>
