--- a/titeres.html
+++ b/titeres.html
@@ -102,12 +102,12 @@
     </a>
     <!-- MASTHEAD -->
     <div class="masthead">
-        <div class="col-1">
-            <p>JUEGOS CONSCIENTES</p>
+        <div class="col-1 cursos-color-text">
+            <p>Creamos cursos extraordinarios para personas extraordinarias.</p>
+            <p>Conectamos con el juego y la actitud lúdica para vivir con alegría y creatividad.</p>
         </div>
         <div class="col-2">
             <div class="text-masthead">
-                <h3>Ingreso Marzo 2022</h3>
             </div>
             <div class="btn-masthead">
                 <a href="inscripcion.html" class="btn">Inscripción</a>
@@ -118,32 +118,26 @@
     <div class="contenedor-col-curso">
         <div class="curso-nav">
             <a href="cursos.html">
-                <h4>juegos étnicos</h4>
+                <h4>juegos de culturas originarias</h4>
+            </a>
+            <a href="abj1.html">
+                <h4>abj1</h4>
+            </a>
+            <a href="abj2.html">
+                <h4>abj2</h4>
             </a>
             <a href="titeres.html">
-                <h4 class="curso-activo">títeres</h4>
+                <h4 class="curso-activo">titeres</h4>
             </a>
-            <a href="ajedrez.html">
-                <h4>ajedrez y cultura</h4>
-            </a>
-            <a href="abj.html">
-                <h4>abj</h4>
-            </a>
-        </div>
-        <div class="curso-central">
-            <img src="img/titeres2.jpg" alt="">
-        </div>
-        <div class="curso-carrito">
-            <i class="fas fa-shopping-cart"></i>
         </div>
         <div class="banda-central">
-            <p>on line</p>
-        </div>
-        <div class="curso-programa">
-            <div class="curso-programa-boton">
-                <h4>ver programa >>></h4>
+            <div class="banda-central-titulo">
+                <p>Curso</p>
             </div>
-            <div class="curso-programa-datos">
+            <div class="banda-central-texto">
+                <p>on line</p>
+            </div>
+            <div class="banda-central-datos">
                 <p>
                     <i class="fas fa-map-marker-alt"></i>
                     sede plataforma online
@@ -154,41 +148,13 @@
                 </p>
             </div>
         </div>
-        <div class="curso-programa-drop">
-            <div class="drop-contenido">
-                <div class="drop-item">
-                    <ul>
-                        <li>
-                            <p> 
-                                <strong>TÍTERE DE MAROTE EN CARTAPESTA</strong><br>
-                                Realización de diseño<br>
-                                Armado de cabeza y manos<br>
-                                Confección de vestuario y moldes<br><br>
-                                <strong class="texto-violeta bold">"PROXIMAMENTE"</strong><br>
-                            </p>
-                        </li>
-                        <li>
-                            <p class="texto-violeta">
-                                <strong>TEATRO DE SOMBRAS</strong><br>
-                                Elección del cuento deseado a interpretar.<br>
-                                Diseño de teatro de sombras y realización del personaje y la escenografía
-                            </p>
-                        </li>
-                        <li>
-                            <p class="texto-violeta">
-                                <strong>TÍTERE BOCON DE VARILLA</strong>
-                            </p>
-                        </li>
-                    </ul>
-                    <p class="texto-violeta">a cargo del prof. Sebastián González.</p>
-                </div>
-            </div>
+        <div class="proximamente">
+            <h3>"PROXIMAMENTE"</h3>
         </div>
     </div>
     <!-- PREGUNTAS FRECUENTES -->
     <div class="curso-img-contenedor">
         <img src="img/titeres.jpg" alt="">
-        <a target="_blank" href="https://mpago.la/2MLDFAa">empieza ya</a>
         <h3>Curso completo de <strong>TÍTERES</strong> con especialistas</h3>
     </div>
     <div class="preguntas-title">
