--- a/carrera.html
+++ b/carrera.html
@@ -106,7 +106,7 @@
         </div>
         <div class="col-2">
             <div class="text-masthead">
-                <h3>Ingreso Marzo 2022</h3>
+                <h3>Ingreso Agosto 2022</h3>
             </div>
             <div class="btn-masthead">
                 <a href="inscripcion.html" class="btn">Inscripción</a>
@@ -178,6 +178,7 @@
                         <p>2 fotos tipo carnet.</p>
                     </div>
                 </div>
+                <p style="text-align: center;">LAS CUOTAS SE ABONAN DE MARZO A DICIEMBRE</p>
             </div>
         </div>
     </div>
