--- a/contacto.html
+++ b/contacto.html
@@ -107,7 +107,7 @@
         </div>
         <div class="col-2">
             <div class="text-masthead">
-                <h3>Ingreso Marzo 2022</h3>
+                <h3>Ingreso Agosto 2022</h3>
             </div>
             <div class="btn-masthead">
                 <a href="inscripcion.html" class="btn">Inscripción</a>
