--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
         </div>
     </a>
     <!-- LINK PROPAGANDA CURSO -->
-    <a href="abj.html">
+    <!-- <a href="abj.html">
         <div class="propaganda-curso">
             <h3>Curso de verano</h3> 
             <h3>disponible</h3>
             <p>Inicia el 16 de febrero</p>
         </div>
-    </a>
+    </a> -->
     <!-- MASTHEAD -->
     <div class="masthead imagen">
         <div class="col-1">
@@ -115,7 +115,7 @@
         </div>
         <div class="col-2">
             <div class="text-masthead">
-                <h3>Ingreso Marzo 2022</h3>
+                <h3>Ingreso Agosto 2022</h3>
             </div>
             <div class="btn-masthead">
                 <a href="inscripcion.html" class="btn">Inscripción</a>
