--- a/abj1.html
+++ b/abj1.html
@@ -108,9 +108,10 @@
         </div>
         <div class="col-2">
             <div class="text-masthead">
+                <p>Inscripciones al curso</p>
             </div>
             <div class="btn-masthead">
-                <a href="inscripcion.html" class="btn">Inscripción</a>
+                <a href="https://n9.cl/abj1-cursovirtual" class="btn">Inscripción</a>
             </div>
         </div>
     </div>
@@ -260,7 +261,7 @@
                 <div class="preguntas-texto">
                     <div class="preguntas-texto-contenido">
                         <p>
-                            Fecha de inicio: 16 de febrero del 2022.
+                            Consultar fecha de inicio.
                         </p>
                     </div>
                 </div>
@@ -271,9 +272,7 @@
                 <div class="preguntas-texto">
                     <div class="preguntas-texto-contenido">
                         <p>
-                            El curso consta de 4 encuentros.<br>
-                            16 y 23 de febrero; 2 y 9 de marzo.<br>
-                            <strong>Horario:</strong> 19 a 20:30 hs.
+                            El curso consta de 4 encuentros.
                         </p>
                     </div>
                 </div>
@@ -284,10 +283,10 @@
                 <div class="preguntas-texto">
                     <div class="preguntas-texto-contenido">
                         <p>
-                            El curso se ofrece a distancia mediante 4 clases anacrónicas con una duración de 1 hora cada una. Pudiendo así manejar tus días y horarios.<br>
-                            Cada clase incluye material complementario de lectura  y juegos para descargar, jugar y/o modificar de acuerdo al interés de aplicación de cada uno.<br>
-                            Foro para compartir experiencias. Un grupo de WhatsApp para abrir diálogo entre los que cursa y profesores.<br>
-                            Para la entrega del certificado deberá presentar un trabajo práctico al finalizar el curso.
+                            El programa se ofrece a distancia mediante clases en vivo por zoom, entrega de material de lectura complementario y un grupo de WhatsApp para consultas y compartir experiencias.<br>
+                            Las clases en vivo quedarán grabadas en la plataforma de YUGUETS para quienes no hayan podido conectarse o deseen volver a verlas.<br>
+                            Para ser evaluado deberá presentar un trabajo práctico.<br>
+                            Al finalizarlo se otorgará el certificado correspondiente.
                         </p>
                     </div>
                 </div>
