--- a/abj2.html
+++ b/abj2.html
@@ -108,9 +108,10 @@
         </div>
         <div class="col-2">
             <div class="text-masthead">
+                <p>Inscripciones al curso</p>
             </div>
             <div class="btn-masthead">
-                <a href="inscripcion.html" class="btn">Inscripción</a>
+                <a href="https://n9.cl/abj2-cursovirtual" class="btn">Inscripción</a>
             </div>
         </div>
     </div>
@@ -269,7 +270,7 @@
                 <div class="preguntas-texto">
                     <div class="preguntas-texto-contenido">
                         <p>
-                            El curso contiene de  4 módulos, cada módulo consta de 2 videos, uno teórico y otro práctico con una duración de 40 minutos cada uno recomendamos hacer un módulo por semana para afianzar los conocimientos.
+                            El curso contiene de  4 módulos, cada módulo consta de 2 videos, uno teórico y otro práctico con una duración de 40 minutos cada uno. Recomendamos hacer un módulo por semana para afianzar los conocimientos.
                         </p>
                     </div>
                 </div>
@@ -280,9 +281,10 @@
                 <div class="preguntas-texto">
                     <div class="preguntas-texto-contenido">
                         <p>
-                            El programa se ofrece a distancia mediante clases en vivo por zoom, entrega de material de lectura complementarios, y un WhatsApp para consultas y compartir experiencias.<br>
-                            Las clases en vivo quedarán grabadas en la plataforma de YUGUETS para quienes no hayan podido conectarse o deseen volver a verlas.<br>
-                            Para ser evaluado deberá presentar un trabajo práctico.
+                            El programa se ofrece a distancia mediante videos  asincrónicos. Esta modalidad te permite manejar tus días y horarios.<br>
+                            Un whatsapp para consultas y un foro para compartir experiencias.<br>
+                            Entrega de material de lectura complementario y juegos para imprimir.<br>
+                            Para obtener el certificado deberán presentar un trabajo final.
                         </p>
                     </div>
                 </div>
