--- a/cursos.html
+++ b/cursos.html
@@ -108,9 +108,10 @@
         </div>
         <div class="col-2">
             <div class="text-masthead">
+                <p>Inscripciones al curso</p>
             </div>
             <div class="btn-masthead">
-                <a href="inscripcion.html" class="btn">Inscripción</a>
+                <a href="https://forms.gle/U56EAh4XVYFHMkKK8" class="btn">Inscripción</a>
             </div>
         </div>
     </div>
