--- a/abj1.html
+++ b/abj1.html
@@ -198,7 +198,7 @@
             </div>
         </div>
         <div class="btn-masthead btn-curso">
-            <a href="https://mpago.la/2ynGxsH" class="btn">empieza ya</a>
+            <a href="https://mpago.la/1oygFRm" class="btn">empieza ya</a>
         </div>
     </div>
     <!-- PREGUNTAS FRECUENTES -->
@@ -308,7 +308,7 @@
                 <div class="preguntas-texto">
                     <div class="preguntas-texto-contenido">
                         <p>
-                            El curso tiene un costo de $6.000 (pesos argentinos).
+                            El curso tiene un costo de $9.800 (pesos argentinos).
                         </p>
                     </div>
                 </div>
