--- a/abj2.html
+++ b/abj2.html
@@ -196,7 +196,7 @@
             </div>
         </div>
         <div class="btn-masthead btn-curso">
-            <a href="https://mpago.la/1UJDTrB" class="btn">empieza ya</a>
+            <a href="https://mpago.la/1oygFRm" class="btn">empieza ya</a>
         </div>
     </div>
     <!-- PREGUNTAS FRECUENTES -->
@@ -306,7 +306,7 @@
                 <div class="preguntas-texto">
                     <div class="preguntas-texto-contenido">
                         <p>
-                            El curso tiene un costo de $8.000 (pesos argentinos).
+                            El curso tiene un costo de $$9.800 (pesos argentinos).
                         </p>
                     </div>
                 </div>
