--- a/cursos.html
+++ b/cursos.html
@@ -201,7 +201,7 @@
             </div>
         </div>
         <div class="btn-masthead btn-curso">
-            <a href="https://mpago.la/1dgCpT1" class="btn">empieza ya</a>
+            <a href="https://mpago.la/11tM74b" class="btn">empieza ya</a>
         </div>
     </div>
     <!-- PREGUNTAS FRECUENTES -->
@@ -315,7 +315,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    El curso tiene un costo de $8.000.- (pesos argentinos).
+                    El curso tiene un costo de $9.800.- (pesos argentinos).
                 </p>
             </div>
         </div>
