--- a/inscripcion.html
+++ b/inscripcion.html
@@ -105,10 +105,10 @@
         </div>
         <div class="col-2">
             <div class="text-masthead">
-                <h3>Ingreso Agosto 2022</h3>
+                <h3>Ingreso Marzo 2023</h3>
             </div><br><br>
             <div class="btn-masthead">
-                <a href="https://forms.gle/u5VTHzuJ4dt1HH9E8" class="btn">Formulario</a>
+                <a href="https://forms.gle/CbAPMvJoGCzwrhab9" class="btn">Formulario</a>
             </div>
         </div>
     </div>
@@ -200,7 +200,7 @@
             </div> -->
         </div>
         <div class="col-2 col-inscripcion">
-            <a target="_blank" href="https://mpago.la/15hYwhf">
+            <a target="_blank" href="https://mpago.la/1qhgyGz">
                 abonar matricula
             </a>
             <p class="aclaracion">
