--- a/cursos.html
+++ b/cursos.html
@@ -200,10 +200,15 @@
                 </div>
             </div>
         </div>
-        <div class="btn-masthead btn-curso">
-            <a href="https://mpago.la/11tM74b" class="btn">empieza ya</a>
+        <div class="btn-curso-contenedor">
+            <div class="btn-masthead btn-curso">
+                <a href="https://mpago.la/11tM74b" class="btn">empieza ya</a>
+            </div>
+            <div class="btn-masthead">
+                    <a href="https://forms.gle/U56EAh4XVYFHMkKK8" class="btn">Inscripción</a>
+                </div>
+            </div>
         </div>
-    </div>
     <!-- PREGUNTAS FRECUENTES -->
     <div class="curso-img-contenedor">
         <h3>Curso completo de <strong>JUEGOS DE CULTURAS ORIGINARIAS</strong> con especialistas</h3>
